[package]
name = "oasysdb"
version = "0.8.0"
edition = "2024"
authors = ["Edwin Kys", "AsukaMilet"]

[dependencies]
tokio = { version = "1.47.0", features = ["rt-multi-thread", "macros"] }
hashbrown = { version = "0.15.4", features = ["serde", "rayon"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
clap = "4.5.41"

# gRPC-related dependencies
tonic = "0.13.1"
prost = "0.13.1"

# Serialization-related dependencies
serde = { version = "1.0.208", features = ["derive"] }
bincode = "1.3.3"

# Parallelism-related dependencies
simsimd = "6.5.0"
rayon = "1.10.0"

# Logging-related dependencies
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# Utility dependencies
rand = "0.9.2"
dotenv = "0.15.0"

[build-dependencies]
tonic-build = "0.13.1"
